HTML & CSS Practice - Login Form

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <nav>
         <ul>
           <li><a href="index.html" class="active" title="Home">Home</a></li>
-          <li><a href="index.html" title="Login">Login</a></li>
+          <li><a href="login.html" title="Login">Login</a></li>
           <li><a href="registration.html" title="Signup">Signup</a></li>
           <li><a href="index.html" title="About us">About us</a></li>
         </ul>
