--- a/registration.html
+++ b/registration.html
@@ -6,26 +6,23 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header>
-      <nav>
         <ul>
           <li><a href="index.html" title="Home">Home</a></li>
-          <li><a href="index.html" class="active" title="Login">Login</a></li>
-          <li><a href="registration.html" title="Signup">Signup</a></li>
+          <li><a href="login.html" title="Login">Login</a></li>
+          <li><a href="registration.html" class="active" title="Signup">Signup</a></li>
           <li><a href="index.html" title="About us">About us</a></li>
         </ul>
-      </nav>
-    </header>
     <div class="container">
       <h1 style="text-align:center" >Get Registered & Enjoy Paid Services</h1>
       <div class="form-field" style="text-align:center">
         <form id="registration-form">
-    			<input id="name" name="name" placeholder="Full Name" required="" type="text">
-    			<input id="email" name="email" placeholder="Email" required="" type="email">
-    			<input id="username" name="username" placeholder="Username" required="" type="text">
+    			<input id="name" name="name" placeholder="Full Name" required="true" type="text">
+          <input id="email" name="email" placeholder="Email" required="true" type="email">
+    			<!-- <input id="dob" name="dob" placeholder="Date of birth" required="true" type="date"> -->
+    			<input id="username" name="username" placeholder="Username" required="true" type="text">
     			<input type="password" id="password" placeholder="Password" name="password" required="">
-    			<input type="password" id="repassword" placeholder="Confirm password" name="repassword" required="">
-          <input class="button" name="submit" id="submit" tabindex="5" value="Sign me up!" type="submit">
+    			<input type="password" id="repassword" placeholder="Confirm password" name="repassword" required="true">
+          <input class="button" name="submit" id="submit" value="Sign me up!" type="submit">
         </form>
       </div>
     </div>
