--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="index.html" class="active" title="Home">Home</a></li>
-          <li><a href="login.html" title="Login">Login</a></li>
-          <li><a href="registration.html" title="Signup">Signup</a></li>
-          <li><a href="index.html" title="About us">About us</a></li>
-        </ul>
-      </nav>
-    </header>
+    <ul>
+      <li><a href="index.html" class="active" title="Home">Home</a></li>
+      <li><a href="login.html" title="Login">Login</a></li>
+      <li><a href="registration.html" title="Signup">Signup</a></li>
+      <li class="dropdown">
+        <a href="index.html" title="About us">Dropdown</a>
+        <div class="dropdown-content">
+          <a href="#">Link 1</a>
+          <a href="#">Link 2</a>
+          <a href="#">Link 3</a>
+        </div>
+      </li>
+    </ul>
     <div class="container">
       <h1>Fixed Top Navigation Bar</h1>
       <h2>Scroll this page to see the effect</h2>
