--- a/login.html
+++ b/login.html
@@ -6,18 +6,25 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-        <ul>
-          <li><a href="index.html" title="Home">Home</a></li>
-          <li><a href="login.html" class="active" title="Login">Login</a></li>
-          <li><a href="registration.html" title="Signup">Signup</a></li>
-          <li><a href="index.html" title="About us">About us</a></li>
-        </ul>
+    <ul>
+      <li><a href="index.html" title="Home">Home</a></li>
+      <li><a href="login.html" class="active" title="Login">Login</a></li>
+      <li><a href="registration.html" title="Signup">Signup</a></li>
+      <li class="dropdown">
+        <a href="index.html" title="About us">Dropdown</a>
+        <div class="dropdown-content">
+          <a href="#">Link 1</a>
+          <a href="#">Link 2</a>
+          <a href="#">Link 3</a>
+        </div>
+      </li>
+    </ul>
     <div class="container">
       <h1 style="text-align:center" >Login</h1>
       <div class="form-field" style="text-align:center">
         <form id="login-form">
     			<input id="username" name="username" placeholder="Username" required="true" type="text">
-    			<input type="password" id="password" placeholder="Password" name="password" required="">
+    			<input type="password" id="password" placeholder="Password" name="password" required="true">
           <input class="button" name="submit" id="submit" value="Login" type="submit">
         </form>
       </div>
