--- a/registration.html
+++ b/registration.html
@@ -6,12 +6,19 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-        <ul>
-          <li><a href="index.html" title="Home">Home</a></li>
-          <li><a href="login.html" title="Login">Login</a></li>
-          <li><a href="registration.html" class="active" title="Signup">Signup</a></li>
-          <li><a href="index.html" title="About us">About us</a></li>
-        </ul>
+    <ul>
+      <li><a href="index.html" title="Home">Home</a></li>
+      <li><a href="login.html" title="Login">Login</a></li>
+      <li><a href="registration.html" class="active" title="Signup">Signup</a></li>
+      <li class="dropdown">
+        <a href="index.html" title="About us">Dropdown</a>
+        <div class="dropdown-content">
+          <a href="#">Link 1</a>
+          <a href="#">Link 2</a>
+          <a href="#">Link 3</a>
+        </div>
+      </li>
+    </ul>
     <div class="container">
       <h1 style="text-align:center" >Get Registered & Enjoy Paid Services</h1>
       <div class="form-field" style="text-align:center">
@@ -20,7 +27,7 @@
           <input id="email" name="email" placeholder="Email" required="true" type="email">
     			<!-- <input id="dob" name="dob" placeholder="Date of birth" required="true" type="date"> -->
     			<input id="username" name="username" placeholder="Username" required="true" type="text">
-    			<input type="password" id="password" placeholder="Password" name="password" required="">
+    			<input type="password" id="password" placeholder="Password" name="password" required="true">
     			<input type="password" id="repassword" placeholder="Confirm password" name="repassword" required="true">
           <input class="button" name="submit" id="submit" value="Sign me up!" type="submit">
         </form>
