--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index Page</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -13,7 +13,7 @@
       <li class="dropdown">
         <a href="index.html" title="About us">Dropdown</a>
         <div class="dropdown-content">
-          <a href="#">Link 1</a>
+          <a href="rwd.html">RWD</a>
           <a href="#">Link 2</a>
           <a href="#">Link 3</a>
         </div>
@@ -22,28 +22,60 @@
     <div class="container">
       <h1>Fixed Top Navigation Bar</h1>
       <h2>Scroll this page to see the effect</h2>
-      <h2>The navigation bar will stay at the top of the page while scrolling</h2>
+      <h2>This page consist example for column-count property and media query. Please resize the page
+      to check.</h2>
+      <div class="column-example">
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+        <p>Some text some text some text some text..</p>
+      </div>
 
-      <p>Some text some text some text some text..</p>
-      <p>Some text some text some text some text..</p>
-      <p>Some text some text some text some text..</p>
-      <p>Some text some text some text some text..</p>
-      <p>Some text some text some text some text..</p>
-      <p>Some text some text some text some text..</p>
-      <p>Some text some text some text some text..</p>
-      <p>Some text some text some text some text..</p>
-      <p>Some text some text some text some text..</p>
-      <p>Some text some text some text some text..</p>
-      <p>Some text some text some text some text..</p>
-      <p>Some text some text some text some text..</p>
-      <p>Some text some text some text some text..</p>
-      <p>Some text some text some text some text..</p>
-      <p>Some text some text some text some text..</p>
-      <p>Some text some text some text some text..</p>
-      <p>Some text some text some text some text..</p>
-      <p>Some text some text some text some text..</p>
-      <p>Some text some text some text some text..</p>
-      <p>Some text some text some text some text..</p>
+
     </div>
   </body>
 </html>
