--- a/registration.html
+++ b/registration.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <ul>
+    <ul class="flex-container">
       <li><a href="index.html" title="Home">Home</a></li>
       <li><a href="login.html" title="Login">Login</a></li>
       <li><a href="registration.html" class="active" title="Signup">Signup</a></li>
       <li class="dropdown">
         <a href="index.html" title="About us">Dropdown</a>
         <div class="dropdown-content">
-          <a href="#">Link 1</a>
+          <a href="rwd.html">RWD</a>
           <a href="#">Link 2</a>
           <a href="#">Link 3</a>
         </div>
