--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index Page</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet/less" type="text/css" href="css/style.less" />
+    <script src="scripts/less.js" type="text/javascript"></script>
   </head>
   <body>
     <ul>
@@ -11,7 +12,7 @@
       <li><a href="login.html" title="Login">Login</a></li>
       <li><a href="registration.html" title="Signup">Signup</a></li>
       <li class="dropdown">
-        <a href="index.html" title="About us">Dropdown</a>
+        <a href="#" title="About us">Dropdown</a>
         <div class="dropdown-content">
           <a href="rwd.html">RWD</a>
           <a href="#">Link 2</a>
