--- a/login.html
+++ b/login.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Index Page</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Login Page</title>
+    <link rel="stylesheet/less" type="text/css" href="css/style.less" />
+    <script src="scripts/less.js" type="text/javascript"></script>
+  </head>
   </head>
   <body>
     <ul>
@@ -11,7 +13,7 @@
       <li><a href="login.html" class="active" title="Login">Login</a></li>
       <li><a href="registration.html" title="Signup">Signup</a></li>
       <li class="dropdown">
-        <a href="index.html" title="About us">Dropdown</a>
+        <a href="#" title="About us">Dropdown</a>
         <div class="dropdown-content">
           <a href="rwd.html">RWD</a>
           <a href="#">Link 2</a>
