--- a/registration.html
+++ b/registration.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Index Page</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Registration Page</title>
+    <link rel="stylesheet/less" type="text/css" href="css/style.less" />
+    <script src="scripts/less.js" type="text/javascript"></script>
   </head>
   <body>
     <ul class="flex-container">
@@ -11,7 +12,7 @@
       <li><a href="login.html" title="Login">Login</a></li>
       <li><a href="registration.html" class="active" title="Signup">Signup</a></li>
       <li class="dropdown">
-        <a href="index.html" title="About us">Dropdown</a>
+        <a href="#" title="About us">Dropdown</a>
         <div class="dropdown-content">
           <a href="rwd.html">RWD</a>
           <a href="#">Link 2</a>
